test/errhandling/ferguson/use-after-free.good
use-after-free.chpl:5: In function 'main':
use-after-free.chpl:14: error: Illegal use of dead value
use-after-free.chpl:9: note: 'ex' is dead due to ownership transfer here
use-after-free.chpl:14: error: mention of non-nilable variable after ownership is transferred out of it
use-after-free.chpl:9: note: ownership transfer occurred here
